--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,5 @@ java {
 
 application {
     // Define the main class for the application.
-    mainClass = 'org.example.App'
+    mainClass = 'org.onlybuns.App'
 }
