Updated gitignore so that springboot settings are shared across all collaborators, added User and Location entities as well as a prototype repository and service for User entity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter' // Core Spring Boot Starter
     implementation 'org.springframework.boot:spring-boot-starter-web' // For web applications
     testImplementation 'org.springframework.boot:spring-boot-starter-test' // Testing dependencies
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'  // Swagger dependency
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // Java persistance dependency
+    implementation 'org.postgresql:postgresql:42.7.4' 
+    runtimeOnly 'com.h2database:h2' // H2 Database for in-memory testing
 }
 
 
