Data base password issue fixed

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -6,7 +6,7 @@ logging.level.org.springframework.boot.devtools=DEBUG
 # PostgreSQL connection settings
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=super  # It's okay for dev, but make sure to use an environment variable in production
+spring.datasource.password=super
 
 # JDBC driver class
 spring.datasource.driver-class-name=org.postgresql.Driver
