--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security' // Koristimo BCrypt za hesiranje lozinki da se ne cuvaju u plain text-u
     implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+    // Image compression
+    implementation 'net.coobird:thumbnailator:0.4.8'
+
+
     configurations {
         all {
             exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging' // Izbaci Logback zato sto koristimo log4j2
