--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     implementation 'net.coobird:thumbnailator:0.4.8'
 
 
+    ///RateLimiter
+    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.0.2'
+
     configurations {
         all {
             exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging' // Izbaci Logback zato sto koristimo log4j2
